igfs manager ui bug fixed